images/shrimpandgrits.jpg

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <body background ="images/background.webp">
+        <body background ="../odin-recipes/images/background.webp">
        <center><h1>Odin Recipes</h1>
         <hr>
         <h2>-Skillet Lasagna-</h2>
@@ -24,8 +24,14 @@
         <p>Rich, creamy, and perfect for those fall nights.</p>
         <p></p>
         <a href="../odin-recipes/pumpkinsoup.html">Recipe</a>
+        <hr>
 
-
+        <h2>-Shrimp and Grits-</h2>
+        <img src="../odin-recipes/images/shrimpandgrits.jpg" style= "border: solid 5px">
+        <p>A spicy and hearty meal that's even better as leftovers.</p>
+        <p></p>
+        <a href="../odin-recipes/shrimpandgrits.html">Recipe</a>
+        <hr>
         </center>
     </body>
 
